# GitClaw

./: CLAUDE.md  Cargo.toml  LICENSE  README.md
.claude/: settings.local.json
.github/workflows/: release.yml
npm/: .npmignore  install.js  package.json  publish-platforms.js  update-version.js
src/: app.rs  event.rs  main.rs
src/ai/: claude.rs  minimax.rs  mod.rs  openai.rs  types.rs
src/config/: mod.rs  settings.rs
src/git/: branch.rs  commit.rs  diff.rs  mod.rs  stash.rs  status.rs
src/ui/: ai_panel.rs  diff_panel.rs  file_list.rs  file_tree.rs  mod.rs
